turtleart.lessons.turtleart.Main.DiskTwo.scala.error
Source:6: error: type mismatch;
 found   : Double(20.0)
 required: Int
		for(i<-1 to 90.0/4.5) {
                                ^